kubernetes/main/core/database/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
